--- a/Modul_6/Tugas.ipynb
+++ b/Modul_6/Tugas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e87b3aac",
    "metadata": {},
    "outputs": [
@@ -18,6 +18,7 @@
     }
    ],
    "source": [
+    "# Tugas\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
